--- a/jdelg-pr1844-02/pr01nuevo/index.html
+++ b/jdelg-pr1844-02/pr01nuevo/index.html
@@ -40,13 +40,14 @@
 
                 <div class="card-body">                   
                     <!-- El formulario es para solicitar la entrega en domicilio de la compra del supermercado; pedirá nombre, dirección de entrega, observaciones y en un desplegable (select) las horas de entrega. -->
-                    <form action="/action_page.php" id="formoid">
+                    <form action="/action_page.php" class="needs-validation" id="formoid" novalidate>
                         <!-- <h1>SUPERMERCADOS FACILITO</h1> -->                    
                         <fieldset>
                             <legend>Pedidos a domicilio</legend>
                             <div class="form-group">
                                 <!-- <label for="fnombre">Nombre:</label> -->
-                                <input type="text" class="form-control" id="fnombre" placeholder="Introduzca su nombre">
+                                <input type="text" class="form-control" id="fnombre" placeholder="Introduzca su nombre" required>
+                                <div class="invalid-feedback">Es necesario escribir el nombre</div>
                             </div>
 
                             <!-- <div class="form-group">
@@ -58,7 +59,8 @@
                             <div class="form-group">
                                 <!-- <label for="fdireccion">Dirección de entrega:</label> -->
                                 <input type="text" class="form-control" id="fdireccion"
-                                    placeholder="Introduzca dirección de entrega">
+                                    placeholder="Introduzca dirección de entrega" required>
+                                    <div class="invalid-feedback">Es necesario escribir la dirección</div>
                             </div>
                         </fieldset>
 
@@ -67,9 +69,10 @@
                             <legend>Horas de entrega</legend>
                             <div class="form-group">
                                 <!-- <label for="sel1">Select list:</label> -->
-                                <select class="form-control" id="horas">
+                                <select class="form-control" id="horas" required>
                                     <!-- aquí deben introducirse el listado de horas proveniente de php por medio de un ajax -->
                                 </select>
+                                <div class="invalid-feedback">Debe especificar la hora de entrega</div>
                             </div>                
                         </fieldset>
 
@@ -77,7 +80,7 @@
                             <legend>Observaciones</legend>
                             <div class="form-group">                
                                 <!-- <label for="comment">Comment:</label> -->
-                                <textarea class="form-control" rows="3" id="observaciones" placeholder="Introduzca cualquier petición adicional"></textarea>
+                                <textarea class="form-control" rows="3" id="observaciones" placeholder="(Opcional)"></textarea>
                             </div>
                         </fieldset>
 
