--- a/jdelg-pr1844-02/pr03/index.html
+++ b/jdelg-pr1844-02/pr03/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>pr1844-02-PR02</title>
+    <title>pr1844-02-PR03</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet"
@@ -66,7 +66,22 @@
 
 
                         <fieldset>
-                            <legend>Horas de entrega</legend>
+                            <legend>Horarios y ciudades de entrega de entrega</legend>
+
+                            
+
+                            <div class="form-group">
+                                <!-- <label for="sel1">Select list:</label> -->
+                                <select class="form-control" id="ciudades" required>
+                                    <option value="">Seleccione ciudad</option>
+                                    <option value="1">Valencia</option>
+                                    <option value="2">Burjasot</option>
+                                    <option value="3">Paterna</option>
+                                </select>
+                                <div class="invalid-feedback">Debe especificar la ciudad de entrega</div>
+                            </div>
+
+
                             <div class="form-group">
                                 <!-- <label for="sel1">Select list:</label> -->
                                 <select class="form-control" id="horas" required>
