--- a/jdelg-pr1844-02/pr04/index.html
+++ b/jdelg-pr1844-02/pr04/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>pr1844-02-PR04</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet"
@@ -44,7 +44,7 @@
                         <!-- <h1>SUPERMERCADOS FACILITO</h1> -->                    
                         <fieldset>
                             <legend>Pedidos a domicilio</legend>
-                            <div class="form-group">
+                            <div class="form-group" id="nom">
                                 <!-- <label for="fnombre">Nombre:</label> -->
                                 <input type="text" class="form-control" id="fnombre" placeholder="Introduzca su nombre" required>
                                 <div class="invalid-feedback">Es necesario escribir el nombre</div>
@@ -66,7 +66,38 @@
 
 
                         <fieldset>
-                            <legend>Horas de entrega</legend>
+                            <legend>Horarios y ciudades de entrega de entrega</legend>
+
+                            <div class="form-group">
+                                <!-- <label for="sel1">Select list:</label> -->
+                                <select class="form-control" id="dias" required>
+                                    <option value="">Seleccione dia</option>
+                                    <option value="Lunes">Lunes</option>
+                                    <option value="Martes">Martes</option>
+                                    <option value="Miercoles">Miercoles</option>
+                                    <option value="Jueves">Jueves</option>
+                                    <option value="Viernes">Viernes</option>
+                                    <option value="Sabado">Sábado</option>
+                                </select>
+                                <div class="invalid-feedback">Debe especificar la ciudad de entrega</div>
+                            </div>
+
+
+
+                            
+
+                            <div class="form-group">
+                                <!-- <label for="sel1">Select list:</label> -->
+                                <select class="form-control" id="ciudades" required>
+                                    <!-- <option value="">Seleccione ciudad</option>
+                                    <option value="1">Valencia</option>
+                                    <option value="2">Burjasot</option>
+                                    <option value="3">Paterna</option> -->
+                                </select>
+                                <div class="invalid-feedback">Debe especificar la ciudad de entrega</div>
+                            </div>
+
+
                             <div class="form-group">
                                 <!-- <label for="sel1">Select list:</label> -->
                                 <select class="form-control" id="horas" required>
