pr05 de pr1844-02 terminado

--- a/jdelg-pr1844-02/pr04/index.html
+++ b/jdelg-pr1844-02/pr04/index.html
@@ -79,7 +79,7 @@
                                     <option value="Viernes">Viernes</option>
                                     <option value="Sabado">Sábado</option>
                                 </select>
-                                <div class="invalid-feedback">Debe especificar la ciudad de entrega</div>
+                                <div class="invalid-feedback">Debe especificar el día de entrega</div>
                             </div>
 
 
